--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,20 @@
 </head>
 <body>
     <main>
-        <h1>Sorteiador</h1>
+        <h1>Sorteador</h1>
         <form id="form-sorteador">
             <div>
                 <label for="numero-maximo">Número máximo</label>
-                <input type="number" id="numero-maximo" required min="2" value="2" step="1">
+                <input type="number" id="numero-maximo" required min="2"  step="1">
+
             </div>
-            <button type="submit">Sortear Número</button>
+            <button type="submit">Sorteador número</button>
         </form>
         <div class="resultado">
-            o número sorteado foi: <span id="resultado-valor"></span>
+            O número sorteado foi: <span id="resultado-valor"></span>
         </div>
     </main>
     <script src="@@ENDERECO_DO_JS"></script>
+    <!-- teste -->
 </body>
 </html>
